--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,106 +1,108 @@
-/********
-
-Cabeçalho do site - menu 
-
-
-*********/
-
+/*cabeçalho*/
 header img {
     height: 70px;
     width: 70px;
+    }    
+
+.d-flex {
+    margin-right: 20px;
+}
+
+.form-control {
+    width: 350px; /* Ajuste o valor conforme necessário */
+}
+
+.form-control::placeholder {
+    text-align: center;
 }
 
 
 
-/******************
 
-Conteudo
+/*Conteudo principal*/
 
-************/
+main{
+    min-height: 500px;
+}
 
-/**/
+/*banner*/
+#section-banners img {
+    height: 500px;
+}
+/*Produtos vendidos*/
 
 #section-vendidos {
     text-align: center;
-}
-
-#section-vendidos h2 {
-    text-align: center;
+    }
+    #section-vendidos h2 {
     font-weight: bold;
-
     padding: 20px;
-}
-
-#section-vendidos img {
+    }
+    #section-vendidos img {
     height: 300px;
     border-radius: 10px;
-}
-
-#section-vendidos .card {
+    width: 100%;
+    }
+    #section-vendidos .card {
     margin: 5px;
     border: 1px solid #ccc;
     border-radius: 10px;
-}
-
-#section-vendidos .preco {
+    }
+    #section-vendidos .preco {
     color: red;
     font-size: 18px;
     font-weight: bold;
-}
+    }
+    
 
-/*************
-    Rodape
-*************/
-
+/*Rodapé*/
 footer {
-    text-align: center;
+    position: relative;
+    bottom:0;
 }
-
 footer p {
     text-align: center;
     font-weight: bold;
 
     padding: 10px;
 }
-
-/*Botão ao Voltar topo*/
+/*Botão Voltar topo*/
 
 #voltar-topo {
     position: fixed;
     bottom: 5px;
     right: 50px;
 
-}
+    }
 
-/* ****************
-    página de login
-    
-    ********************/
+/* página de login  */
 
-#section-login h1 {
+#section-login{
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center; 
+
+    margin-top: 100px;
+    align-items: center;
+    }
+
+    #section-login h1 {
     text-align: center;
+    }
 
-}
-
-#section-login input {
+    #section-login input {
     width: 100%;
+    }
 
-}
+/* Formulário de cadastro*/
 
-#section-banners img {
-    height: 500px;
-}
-
-
-/* Box de informações de cadastro*/
-#panel,
-#flip {
+#section-cadastro {
     padding: 5px;
     text-align: center;
     background-color: #fff;
-}
-
-#panel {
+    }
+    #form-cadastrar {
     padding: 50px;
     display: none;
 }
